; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_sysctl.c_sysctl_remove_oid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_sysctl.c_sysctl_remove_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysctl_oid = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sysctl_remove_oid(%struct.sysctl_oid* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.sysctl_oid*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.sysctl_oid* %0, %struct.sysctl_oid** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = call i32 (...) @SYSCTL_WLOCK()
  %9 = load %struct.sysctl_oid*, %struct.sysctl_oid** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @sysctl_remove_oid_locked(%struct.sysctl_oid* %9, i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = call i32 (...) @SYSCTL_WUNLOCK()
  %14 = load i32, i32* %7, align 4
  ret i32 %14
}

declare dso_local i32 @SYSCTL_WLOCK(...) #1

declare dso_local i32 @sysctl_remove_oid_locked(%struct.sysctl_oid*, i32, i32) #1

declare dso_local i32 @SYSCTL_WUNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
